# docker-IoT-pi-pico-w-performance

./: .env.example  .gitignore  Makefile  README.md  code.py  docker-compose.yml  pyproject.toml
monitoring/grafana/dashboards/: picodv-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
pico/: code.py  settings.toml.example  test_dvi.py
scripts/: dev.ps1
server/: __main__.py  app.py  device_registry.py  effect_manager.py  main.py  models.py  observability.py  renderer.py  stream_server.py  tz_utils.py
server/providers/: crypto.py
server/renderer/: __init__.py  config.py  fonts.py  rgb332.py  rgb565.py  text.py
server/renderer/effects/: __init__.py  base.py  scroll.py  wall.py  wave.py
server/renderer/scenes/: __init__.py  base.py  crypto.py  panoramic.py  vitoria_sports.py
tests/: test_auto_discovery.py  test_observability.py
